background image added

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,10 @@
-section {
+html {
+  height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('https://media.wired.com/photos/5b7350e75fc74d47846ce4e4/master/pass/Popcorn-869302844.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
   text-align: center;
   input {
     height: 30px;
