--- a/src/style.scss
+++ b/src/style.scss
@@ -1,13 +1,36 @@
-html {
-  height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('https://media.wired.com/photos/5b7350e75fc74d47846ce4e4/master/pass/Popcorn-869302844.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: 0;
-  text-align: center;
-  input {
-    height: 30px;
-    width: 200px;
-  }
-}
+// html {
+//   height: 100vh;
+//   background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('https://media.wired.com/photos/5b7350e75fc74d47846ce4e4/master/pass/Popcorn-869302844.jpg');
+//   background-position: center;
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   margin: 0;
+//   text-align: center;
+//   font-family: 'Ubuntu', sans-serif;
+//   section {
+//     height: 100vh;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//   }
+//   h1 {
+//     font-size: 2rem;
+//     color: white;
+//     margin: 0;
+//     letter-spacing: 0.3rem;
+//   }
+//   input {
+//     height: 30px;
+//     width: 250px;
+//     border-radius: 10px;
+//     font-size: 1rem;
+//   }
+//   .column {
+//     display: flex;
+//
+//   }
+//   h3, p {
+//     color: white;
+//     font-size: 1rem;
+//   }
+// }
