--- a/src/style.scss
+++ b/src/style.scss
@@ -1,36 +1,47 @@
-// html {
-//   height: 100vh;
-//   background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('https://media.wired.com/photos/5b7350e75fc74d47846ce4e4/master/pass/Popcorn-869302844.jpg');
-//   background-position: center;
-//   background-repeat: no-repeat;
-//   background-size: cover;
-//   margin: 0;
-//   text-align: center;
-//   font-family: 'Ubuntu', sans-serif;
-//   section {
-//     height: 100vh;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//   }
-//   h1 {
-//     font-size: 2rem;
-//     color: white;
-//     margin: 0;
-//     letter-spacing: 0.3rem;
-//   }
-//   input {
-//     height: 30px;
-//     width: 250px;
-//     border-radius: 10px;
-//     font-size: 1rem;
-//   }
-//   .column {
-//     display: flex;
-//
-//   }
-//   h3, p {
-//     color: white;
-//     font-size: 1rem;
-//   }
-// }
+* {
+  box-sizing: border-box;
+  font-family: 'Righteous', cursive;
+}
+section {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('https://i.ytimg.com/vi/IsMRioOpZrY/maxresdefault.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 93vh;
+  justify-content: flex-start;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  h1 {
+    margin-top: 200px;
+    color: white;
+    letter-spacing: 0.5rem;
+  }
+  p {
+    color: white;
+  }
+  input {
+    width: 400px;
+    margin-top: 10px;
+    text-decoration: none;
+    border-radius: 10px;
+  }
+  input:focus {
+    outline: none;
+  }
+  .search-movies {
+    width: 400px;
+    p {
+      color: white;
+      text-decoration: none;
+      margin: 0;
+      font-size: 20px;
+    }
+    p:hover {
+      background-color: #fff;
+      text-decoration: none;
+      color: #000;
+      cursor: pointer;
+    }
+  }
+}
